# fedmix-viewer

./: .editorconfig  .gitignore  CONTRIBUTING.rst  Makefile  README.md  README.rst  docker-compose.yml  nuxt.config.js  package.json  setup.cfg  setup.py
backend/: .gitignore  .pylintrc  Dockerfile  NOTICE  README.rst  project_setup.rst  pytest.ini  setup.cfg  setup.py
backend/config/: config.ini
backend/docs/: Makefile  conf.py  index.rst
backend/fedmix_backend/: __init__.py  datastore.py  fedmix_backend.py  schema.py  validate_config.py
backend/tests/: conftest.py  test_backend.py  test_datastore.py  test_schema.py
backend/tests/mock-data/: README.md
backend/tests/mock-data/dataset-1/: manifest.json
backend/tests/mock-data/dataset-2/: manifest.json
backend/tests/mock-data/not-a-dataset/: README.md
components/: CaseChart.vue  DiceChart.vue  OpenFiles.vue  ScanCanvas.vue  SliceChart.vue  VegaLite.vue
config/: config.ini
docs/: Makefile  make.bat
fedmix_backend/: __init__.py  __version__.py  fedmix_backend.py  schema.py
frontend/: .dockerignore  .eslintrc.js  .graphqlconfig  Dockerfile  docker-compose.yml  nuxt.config.js  package.json
frontend/apollo/: datasets.gql  datasets_select.gql
frontend/components/: CaseChart.vue  OldScanCanvas.vue  ScansCompare.vue  ScansGrid.vue  (+2 more)
layouts/: default.vue  error.vue
mixins/: manifestParser.js
notebooks/: pca.ipynb
pages/: Datasets.vue  index.vue  login.vue  pca.vue  research.vue  researcher-view.vue
plugins/: opencv-plugin.js
tests/: test_fedmix-backend.py  test_fedmix_backend.py  test_lint.py
(+15 files in other folders)
